force-app/main/default/objects/Join__c/Join__c.object-meta.xml
<CustomObject>
    <label>Join</label>
    <nameField>
        <displayFormat>Join-{00000000}</displayFormat>
        <label>Join Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Join</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>