force-app/main/default/objects/Join__c/fields/Component_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Component_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component Pricing</label>
    <referenceTo>Component_Pricing__c</referenceTo>
    <relationshipLabel>Join</relationshipLabel>
    <relationshipName>Join</relationshipName>
    <type>Lookup</type>
</CustomField>