force-app/main/default/objects/Join__c/fields/Qty_Sold__c.field-meta.xml
<CustomField>
    <fullName>Qty_Sold__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>Qty Sold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>